# ashencrm

./: .coverage  .env.example  .gitignore  README.md  check_db.py  data_cleanup.py  db_res.txt  iniciar_crm.bat  pyproject.toml  rescrape_all.py
backend/: main.py
backend/config/: settings.py
backend/core/: config.py  google_maps_url.py  logger.py  maps_website.py
backend/database/: db.py
backend/domain/: __init__.py  prospect.py
backend/generator/: __init__.py  account_manager.py  lovable.py  prompt_builder.py  screenshot.py  service.py
backend/infrastructure/: __init__.py
backend/models/: schemas.py
backend/outreach/: __init__.py  message_builder.py  service.py  whatsapp.py
backend/pipeline/: __init__.py
backend/scraper/: __init__.py  google_maps.py  instagram.py  maps_instagram.py  maps_website.py  models.py
backend/scripts/: run_dashboard.py  run_generator.py  run_next_phases.py  run_pipeline_cycle.py  run_pipeline_scheduler.py  run_scraper.py
backend/services/: app_settings_service.py  scrape_service.py
backend/tests/: test_database_exports.py  test_generator.py  test_google_maps_url.py  test_imports.py  test_maps_website.py  test_outreach.py  test_prospect_domain.py  test_prospect_repository.py  test_sql_console.py
data/db/: prospects.db
data/etl/: __init__.py
data/exports/: test_exports.db
data/scripts/: clean_data.py  enrich_instagram.py  enrich_maps.py  enrich_web.py  health_check.py  login_lovable.py  run_crm.py  scrape_to_target.py  verify.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+97 files in other folders)
